kustomize-pythonmessage/pythonmessage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonmessage
  namespace: pythonmessage
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: pythonmessage
