kustomize-pythonmessage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonmessage-ingress
  namespace: pythonmessage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pythonmessage.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-pythonmessage
            port:
              number: 12345
